Adding rsnapshot autoconf for nodes

--- a/files/etc/rsnapshot.conf
+++ b/files/etc/rsnapshot.conf
@@ -226,9 +226,9 @@ linux_lvm_mountpath	/tmp/lvm_snapshot
 ###############################
 
 # LOCALHOST
-backup	/home/		localhost/
-backup	/etc/		localhost/
-backup	/usr/local/	localhost/
+#backup	/home/		localhost/
+#backup	/etc/		localhost/
+#backup	/usr/local/	localhost/
 #backup	/var/log/rsnapshot		localhost/
 #backup	/etc/passwd	localhost/
 #backup	/home/foo/My Documents/		localhost/
